--- a/balance_robot_arduino/platformio.ini
+++ b/balance_robot_arduino/platformio.ini
@@ -13,4 +13,8 @@ platform = atmelsam
 board = due
 framework = arduino
 monitor_speed = 115200
-lib_deps = finani/ICM42688@^1.1.0
+lib_deps = 
+	finani/ICM42688@^1.1.0
+	;janelia-arduino/TMC2209@^9.0.7
+	;featherfly/SoftwareSerial@^1.0
+	waspinator/AccelStepper@^1.64
