added some thing on ubuntu

--- a/balance_robot_arduino/platformio.ini
+++ b/balance_robot_arduino/platformio.ini
@@ -15,6 +15,6 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	finani/ICM42688@^1.1.0
-	;janelia-arduino/TMC2209@^9.0.7
-	;featherfly/SoftwareSerial@^1.0
+	janelia-arduino/TMC2209@^9.0.7
+	featherfly/SoftwareSerial@^1.0
 	waspinator/AccelStepper@^1.64
